--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?njfjl#1" target="_blank">首页</a> | <a href="https://dme0bxbvomkno.cloudfront.net/1?czmdzbtu" target="_blank">动态网</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/2?zfevzdqpk" target="_blank">大纪元</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/4?tiedee" target="_blank">看中国</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/pHh5q?aercu" target="_blank">新生网</a> | <a href="https://dvucua6a0b85v.cloudfront.net/tktpt?hlxmx" target="_blank">阿波罗网</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/Mjpvu?iyvgvcoht" target="_blank">干净世界</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/10?gmhijd" target="_blank">退党服务</a> | <a href="https://d3gus727acem18.cloudfront.net/Rffqf?hsknlam" target="_blank">明慧广播</a> | <a href="https://dervszfjn9udk.cloudfront.net/nw9Vn?vibryqnv" target="_blank">传奇时代</a> | <a href="https://d239x61949z6p.cloudfront.net/AF9AG?jnvezy" target="_blank">新境界影视</a> | <a href="https://d1jex6syje0yji.cloudfront.net/zqMQA?tsaefz" target="_blank">文昭谈论</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/7?ywfpihbqw" target="_blank">明慧</a></p><p><a href="https://ddtx9y1vir8bp.cloudfront.net/9?gwpcsggud" target="_blank">大法</a> | <a href="https://dep6yudto3kbo.cloudfront.net/3?ivaiovz" target="_blank">新唐人</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/obAhT?mflytbyz" target="_blank">人民报</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/xXNHu?dgwqjmydl" target="_blank">放光明</a> | <a href="https://d3gus727acem18.cloudfront.net/5?vairqtxf" target="_blank">新纪元</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/6?ihkoiw" target="_blank">希望之声</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/11?yzpcf" target="_blank">无界网络</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/Pueji?sutxg" target="_blank">追查国际</a> | <a href="https://d8jw662akk94j.cloudfront.net/16?goffudwgh" target="_blank">明慧之窗</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/LdvzZ?qullbuaq" target="_blank">细语人生</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/fBn3r?oodwsmvc" target="_blank">新世纪影视</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/PUWMb?ausory" target="_blank">江峰时刻</a> | <a href="https://dcz6rimunj42y.cloudfront.net/8?hibsdsd" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?whyujqfji#1" target="_blank">首页</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/1?nweomhj" target="_blank">动态网</a> | <a href="https://d2zw89wk00y815.cloudfront.net/2?gamhe" target="_blank">大纪元</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/4?cprwaoxaw" target="_blank">看中国</a> | <a href="https://dvucua6a0b85v.cloudfront.net/pHh5q?yless" target="_blank">新生网</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/tktpt?gzmqjtqk" target="_blank">阿波罗网</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/Mjpvu?thgvbifo" target="_blank">干净世界</a> | <a href="https://d2oemtubh889hy.cloudfront.net/10?bnsshka" target="_blank">退党服务</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/Rffqf?iekhccjxb" target="_blank">明慧广播</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/nw9Vn?egeedy" target="_blank">传奇时代</a> | <a href="https://d1jex6syje0yji.cloudfront.net/AF9AG?mewusy" target="_blank">新境界影视</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/zqMQA?wmvtlf" target="_blank">文昭谈论</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/7?dxsiyge" target="_blank">明慧</a></p><p><a href="https://d2nbk5p6zab41i.cloudfront.net/9?grmqof" target="_blank">大法</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/3?qixvsy" target="_blank">新唐人</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/obAhT?hebtia" target="_blank">人民报</a> | <a href="https://d2oemtubh889hy.cloudfront.net/xXNHu?ygzkaam" target="_blank">放光明</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/5?enbiqepfm" target="_blank">新纪元</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/6?jlrqx" target="_blank">希望之声</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/11?qukvh" target="_blank">无界网络</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/Pueji?vthtun" target="_blank">追查国际</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/16?fvadrgv" target="_blank">明慧之窗</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/LdvzZ?ksxnhd" target="_blank">细语人生</a> | <a href="https://d1u99il8548gs4.cloudfront.net/fBn3r?xkopzbtpb" target="_blank">新世纪影视</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/PUWMb?orlotfiv" target="_blank">江峰时刻</a> | <a href="https://d21y52w6f35pla.cloudfront.net/8?wohzvxx" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290687-AFP__20240714__36444AF__v1__Preview__UsPoliticsBidenStatement-320x200.jpg"><p align="center">川普遇袭后 拜登讲话：暴力在美国无立足地</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1" title="川普遇袭后 拜登讲话：暴力在美国无立足地""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290687-AFP__20240714__36444AF__v1__Preview__UsPoliticsBidenStatement-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1" title="【直播】川普遇刺最新进展 记者连线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290722-800X600-320x200.jpg">&nbsp;</a>
@@ -13,24 +13,24 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290250.md#1" title="拜登在枪击事件后与川普通话 提前返白宫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290263-AFP__20240714__363Y8F7__v2__HighRes__PresidentialElection-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290432.md#1" title="庆独立日精神 新世纪主办“美丽的美利坚”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290491-2407140422581528-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290745.md#1">宾州高中老师：枪手较沉默 通常独自一人</a><br>
-:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290697.md#1">进入野火高峰季 加州被高温与大火包围</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287390.md#1">五款经久耐用且维护费低的SUV 全是日本车</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290776.md#1">欧美文化差异有多大？连喝水习惯都大不同</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1">陆无人驾驶计程车抢市 百万司机陷失业焦虑</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290745.md#1">宾州高中老师：枪手较沉默 通常独自一人</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290697.md#1">进入野火高峰季 加州被高温与大火包围</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287390.md#1">五款经久耐用且维护费低的SUV 全是日本车</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14290776.md#1">欧美文化差异有多大？连喝水习惯都大不同</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1">陆无人驾驶计程车抢市 百万司机陷失业焦虑</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290741.md#1">川普抵达密尔沃基 参加共和党全国大会</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290708.md#1">组图：法国国庆节 2024巴黎奥运火炬亮相</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290708.md#1">组图：法国国庆节 2024巴黎奥运火炬亮相</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290725.md#1">川普遇袭事件 FBI披露更多信息</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1">川普遇袭后 拜登讲话：暴力在美国无立足地</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290673.md#1">前消防队长在川普集会上遇难 州长：降半旗悼念</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290039.md#1">广东多地现不明飞行物 目击者：持续10分钟</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289908.md#1">失业潮下 四川大学拟撤31个专业 引热议</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289988.md#1">租客朋友暂住未报官 深圳房东遭罚 网民吃惊</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289642.md#1">走线华人参加法轮功大游行：我要忏悔</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289737.md#1">中国社会戾气上升 逾1个月发生60起袭击事件</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289769.md#1">北京突降暴雨 一秒白天变黑夜 连发六预警</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243928.md#1">人类存亡危机与创世主的恩典</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14241958.md#1">【特稿】人类起源问题的终极答案</a><br>
@@ -113,19 +113,19 @@
 
 !共 433,190,408 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290407-2407131413552483-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1">反迫害25周年 法轮功学员纽约上州集会</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289281.md#1">遭软禁九个月 上海访民丁水萍向外界呼救</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289752-a15b52fb24370562f073f5bb29b3e6cf-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1">陆无人驾驶计程车抢市 百万司机陷失业焦虑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1">中国饮用水价格战开打 农夫山泉0.74元一瓶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289769.md#1">北京突降暴雨 一秒白天变黑夜 连发六预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290228-7296066ff825d0fad4e91ba4e2c7f6d4-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290407-2407131413552483-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1">反迫害25周年 法轮功学员纽约上州集会</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289281.md#1">遭软禁九个月 上海访民丁水萍向外界呼救</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289752-a15b52fb24370562f073f5bb29b3e6cf-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1">陆无人驾驶计程车抢市 百万司机陷失业焦虑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1">中国饮用水价格战开打 农夫山泉0.74元一瓶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290228-7296066ff825d0fad4e91ba4e2c7f6d4-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274702.md#1">洪水淹桂林 王维洛：与发展旅游等有关</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260042.md#1">袁红冰忆六四：坦克车把学生挤死在铁栏上</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/17/n14252403.md#1">【专访】前中共特工谈跨境迫害运作内幕</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243718.md#1">【中国观察】日趋“密封”的北京政权</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/4/29/n14236832.md#1">中国人进入新冠和疫苗两类后遗症的苦难</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286009.md#1">菩萨赐白莲花？高僧虚云和章嘉国师的神奇经历</a><br>
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274290.md#1">看《龙文鞭影》学典故：直笔吴兢 公议袁枢</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286009.md#1">菩萨赐白莲花？高僧虚云和章嘉国师的神奇经历</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281251.md#1">【古道人生】孝子为救病父投崖代父死 出现了什么神迹？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283260.md#1">1999年那个夏天</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287690.md#1">莎士比亚十四行诗第60首：来自大海的灵感</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14288096.md#1">“母亲节有奖征文”评选结果揭晓</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://cn.epochtimes.com/gb/nf1351518.htm">https://cn.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/1992513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
